# sps_simulations

./: 4d_tracking_without_sextupoles.ipynb  6d_tracking.ipynb  Plot_lossmaps_diffusion.ipynb  indiv_part_tracking.ipynb  injection_thick_approx_ap.json  interactive_plotter.ipynb  lm_comparison.ipynb  merge_LM_files.ipynb  phase_space_check.ipynb  rect_xy_particles.ipynb  tidvg_test.ipynb  updateXsuite.sh  x_delta_distr.ipynb
CombineJsons/: combine_jsons.sh  combine_jsons2.sh  combine_jsons3.sh  combine_jsons4.sh  combine_jsons_script.py
FrederikStuff/: stacked_aperture copy.ipynb  stacked_aperture.ipynb  sweep.ipynb
MD_analysis/: blm_ldb_listing.xlsx  blm_positions.ipynb  blm_positions.json  bpm_class_development.ipynb  bpm_data_analysis.ipynb  bump_installation_test.ipynb  bump_simulation_test.ipynb  xcoll_rf_sweep_test.ipynb
Prototyping/: 20250703.ipynb  20250718.ipynb  20250721.ipynb  20250722.ipynb  20250811.ipynb  20250813.ipynb  20250814.ipynb  20250815.ipynb  20250818.ipynb  20250819.ipynb  20250819_v2.ipynb  20250821.ipynb  20250902.ipynb  20250904.ipynb  20250917.ipynb  20250918.ipynb  20250919.ipynb  20250925.ipynb  20250929.ipynb  20250930.ipynb  20251001.ipynb  20251002.ipynb  20251003.ipynb  (+14 more)
aperture_tools/: ApertureCalculator.py  InteractivePlotter.py  apertureCalculator_test.ipynb  pyproject.toml  test_interactive_plotter.ipynb  tests.ipynb
aperture_tools/src/apertls/: ApertureCalculator.py  AperturePlotter.py  InteractivePlotter.py  ManageApertures.py  __init__.py
aperture_tools/src/apertls.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+4303 files in other folders)
