[project]
name = "apertls"
description = "A great package."
readme = "README.md"
authors = [
  { name = "Lise Pauwels", email = "lise.eliane.pauwels@cern.ch" },

]
requires-python = ">=3.8"
version = "0.0.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


dependencies = [
  "numpy", "matplotlib", "xsuite", "xpart", "xcoll", "xdeps", "xtrack", "xobjects", "xfields", "scipy"
]


classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/lisepauwels/sps_simulations"